--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,13 @@
   padding: 20px;
 }
 
+
+.pic-list__description {
+  width: 80%;
+  line-height: 1.3;
+  margin: 0 auto;
+}
+
 .pic-list__img {
   display: block;
   margin: 20px auto;
